--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -32,13 +32,20 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
 
+
         <activity
-            android:name=".MainActivity"
+            android:name=".CenterActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+
+
+        <activity
+            android:name=".AddressActivity"
+            android:label="@string/title_address_settings"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
