--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".SplashScreen"
-            android:label="TESTING!@#">
+            android:label="Locaté">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
